# intelligent-video-curation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
intelligent_video_curation/: main.py
intelligent_video_curation/classes/: config.py  helpers.py  labels.py  video.py
intelligent_video_curation/filters/: exposure.py  filter.py
intelligent_video_curation/filters/dummy/: dummy_filter.py
intelligent_video_curation/helpers/: files.py  output.py  setup.py
intelligent_video_curation/preprocessors/: preprocess.py
intelligent_video_curation/preprocessors/video/: tasks.py
sample_configs/: config.yaml
